--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,9 @@
 * {
 	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
 }
 
 body {
+	padding: 0;
 	margin: 0;
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
@@ -47,6 +46,7 @@ body {
 }
 header {
 	position: fixed;
+	z-index: 100;
 	width: 100%;
 	height: 3rem;
 	padding: 0 1rem;
@@ -106,6 +106,10 @@ header {
 	/*margin: 1rem 0;*/
 	/*border: 1px solid #CFD8DC;*/
 	background-color: #f5f7fa;
+}
+.card * {
+	margin: 0;
+	padding: 0;
 }
 .card-nb {
 	font-weight: 300;
