--- a/docs/style.css
+++ b/docs/style.css
@@ -40,6 +40,11 @@ body {
 		max-width: 50%;
 	}
 }
+@media screen and (min-width: 1240px) {
+	.l__home__lesson-item {
+		max-width: 33.3333%;
+	}
+}
 .l__home__lesson-item .card {
 	margin: 0.25rem;
 	transition: width 0.6s;
@@ -104,7 +109,7 @@ header {
 .card {
 	display: flex;
 	/*margin: 1rem 0;*/
-	/*border: 1px solid #CFD8DC;*/
+	border: 1px solid #eff0f4;
 	background-color: #f5f7fa;
 }
 .card * {
