--- a/exercices/cours-14/app-chat/style.css
+++ b/exercices/cours-14/app-chat/style.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 
+div img {
+	vertical-align: bottom;
+}
+
 body {
 	position: absolute;
 	top: 0;
@@ -177,13 +181,53 @@ button .icon {
 
 /* Friend-list : zone centrale */
 .friends-list-messages-item {
+	position: relative;
+	display: block;
 	padding: 25px 20px;
 	display: flex;
 	align-items: center;
+	border-left: 3px solid transparent;
+	text-decoration: none;
+	color: #fff;
+}
+
+.friends-list-messages-item:hover {
+	background-color: #2b80ff;
+}
+
+.friends-list-messages-item.active {
+	border-left-color: #2b80ff;
+}
+
+.friends-list-messages-item.connected:before {
+	content:"";
+	position: absolute;
+	top: 20px;
+	left: 12px;
+	display: block;
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+	background-color: #2dc100;
 }
 
 .m-avatar img {
 	border-radius: 50%;
+}
+.m-avatar {
+	position: relative;
+}
+.m-avatar:after {
+	content:"";
+	position: absolute;
+	left: 0;
+	bottom: -25px;
+	width: 100%;
+	height: 1px;
+	background-color: #3f444b;
+}
+.friends-list-messages-item:hover .m-avatar:after {
+	background-color: transparent;
 }
 
 .m-infos {
